# Hybrid-Movie-Recommender

./: .gitattributes  .gitignore  .hfignore  README.md  app.py  pipeline_flowchart  pipeline_flowchart.py  project_problem_statement.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
checkpoints/: meta_lgbm.pkl  meta_lgbm_tuned.pkl
configs/: config.yaml
configs/data/: ml1m.yaml
configs/eval/: ncf_protocol.yaml
configs/experiment/: baseline_bpr.yaml  baseline_bprmf.yaml  baseline_itemknn.yaml  baseline_neumf.yaml  baseline_pop.yaml  dcn.yaml  dcnv2.yaml  ease.yaml  lightgcn.yaml
configs/model/: bprmf.yaml  dcnv2.yaml  ease.yaml  (+4 more)
results/: ablation.json  baseline_bpr.json  baseline_itemknn.json  baseline_neumf.json  baseline_pop.json  best_params.json  best_params_sasrec_pipeline_HR79_NDCG62.json  cold_user_table.json  dcn_smoke.json  ease.json  hybrid_pipeline.json  lightgcn_smoke.json  meta_learner_val_auc.txt  table1_baselines.md  table1_baselines.tex  table4_cold_users.md  table4_cold_users.tex  table5_ablation.md  table5_ablation.tex  tuned_pipeline.json
scripts/: ablation_runner.py  build_cold_start_profiles.py  build_llm_features.py  build_llm_features_lora.py  build_lora_dataset.py  cold_user_eval.py  dump_scores.py  eval.py  fast_recover.sh  generate_tables.py  lora_train.py  metrics_postproc.py  plot_diversity_vs_frozen_ndcg.py  prepare_data.py  rebuild_all.sh  recover_pipeline_tmux.sh  retrain_neural_models.py  run_fixed_pipeline.sh  run_pipeline.py  train_final_model.py  train_meta_learner.py  train_sasrec.py  tune_meta_learner.py
(+51 files in other folders)
